Ticket #27514: Tiny code cleanups.